added a header and dog

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <div class="header">
+        <img class="icon" src="media/online_icon_tsp.svg"/>
+    </div>
+    <div class="gradient"></div>
+    <div class="main">
+        <img src="media/dance.gif">
+    </div>
+    
 </body>
 </html>
